# mpg123

./: Makefile.am  NEWS  configure.ac
branches-old/mpg123-unicode/: configure.ac
branches-old/mpg123lib/: configure.ac
branches-old/njh-outputplugin/: MakeLegacy.sh
branches-old/stereo_opts/: configure.ac
branches/libout123/: NEWS  configure.ac
branches/libout123/src/libout123/: Makefile.am  Makemodule.am  buffer.c  buffer.h  libout123.c  module.c  module.h  out123.h  out123.h.in  out123_int.h  out123_intsym.h  outmod_def.h  wav.c  wav.h  xfermem.c  xfermem.h
branches/libout123/src/libout123/modules/: Makemodule.am  alib.c  alsa.c  alsa05.c  arts.c  coreaudio.c  esd.c  jack.c  libao.c  os2.c  portaudio.c  sdl.c  sgi.c  win32.c
branches/loader_rework/: configure.ac
branches/mpg123-unicode/: configure.ac
branches/mpg123lib/: Makefile.am  autogen.sh  configure.ac
branches/mpg123lib/src/: Makefile.am  audio.c  audio.h  audio_aix.c  audio_alib.c  audio_alsa.c  audio_alsa05.c  audio_coreaudio.c  audio_dummy.c  audio_esd.c  audio_hp.c  audio_jack.c  audio_libao.c  audio_mint.c  audio_nas.c  audio_os2.c  audio_oss.c  audio_portaudio.c  audio_sdl.c  audio_sgi.c  audio_sun.c  audio_win32.c  buffer.c  common.c  common.h  control_generic.c  decode.c  decode.h  decode_2to1.c  decode_3dnow.S  decode_3dnowext.S  decode_4to1.c  decode_altivec.c  decode_i386.c  decode_i486.c  decode_i586.S  decode_i586_dither.S  decode_ntom.c  decode_sse.S  decode_sse3d.S  (+42 more)
branches/mpg123lib/src/libmpg123/: Makefile.am  decode_3dnowext.S  decode_sse.S  libmpg123.c
branches/njh-outputplugin/: Makefile.am  autogen.sh  configure.ac
branches/njh-outputplugin/modules/: Makefile.am
branches/njh-outputplugin/modules/output_alsa/: Makefile.am  alsa.c
branches/njh-outputplugin/modules/output_coreaudio/: Makefile.am  coreaudio.c
branches/njh-outputplugin/modules/output_dummy/: Makefile.am  dummy.c
branches/njh-outputplugin/modules/output_esound/: Makefile.am  esound.c
branches/njh-outputplugin/modules/output_jack/: Makefile.am  jack.c
branches/njh-outputplugin/modules/output_libao/: libao.c
branches/njh-outputplugin/modules/output_nas/: Makefile.am  nas.c
branches/njh-outputplugin/modules/output_oss/: Makefile.am  oss.c
branches/njh-outputplugin/modules/output_portaudio/: Makefile.am  portaudio.c
branches/njh-outputplugin/modules/output_pulse/: Makefile.am  pulse.c
branches/njh-outputplugin/modules/output_sdl/: Makefile.am  audio_sdl.c  sdl.c
branches/njh-outputplugin/src/: Makefile.am  Makefile.legacy  audio.c  audio.h  audio_alsa.c  audio_alsa05.c  audio_coreaudio.c  audio_dummy.c  audio_esd.c  audio_jack.c  audio_nas.c  audio_os2.c  audio_sdl.c  audio_win32.c  common.h  control_generic.c  layer3.c  legacy_module.c  module.c  module.h  mpg123.c  mpg123.h  term.h  wav.c
branches/njh-outputplugin/src/modules/: Makefile.am  output_alib.c  output_coreaudio.c  output_hp.c  output_jack.c  output_libao.c  output_nas.c  output_oss.c  output_pulse.c  output_sun.c
branches/njh-outputplugin/src/output/: Makefile.am  alsa.c  mint.c  portaudio.c  sdl.c
branches/njh-outputplugin/src/plugins/: Makefile.am  output_sdl.c
branches/no-textrels/: NEWS
branches/stereo_opts/: configure.ac
buglog/: bug1777621_shuffletest.c  buglog.txt  fuzzing.txt  gentoo-bug133988_GLSA_200607-01.html  jinglebellz.c  mathias_wenzel_stress.txt
buglog/bug2053181_sse_threadsafe/: main.c  makefile  mpg123_sample_modified.c  script.cmd  script.sh  support.c
compliance/layer1/: fl2.pcm  fl4.pcm  fl6.mpg  fl7.pcm  fl8.pcm
compliance/layer2/: fl10.mpg  fl12.mpg  fl12.pcm  fl13.pcm  fl16.mpg
debian/0.59r-20/: Makefile  mpg123.c  readers.c
debian/0.59r-22/: decode_i386.c  mpg123.c  mpg123.h
debian/patches/: mpg123_0.59r-22.diff
doc/: buffer.txt
legal/: inventory.txt  notes.txt
legal/statements/: Andreas_Neuhaus_<andy@stud.fh-dortmund.de>  Colin_Watson.email  Guillaume_Outter.email  Juergen_Schoew_<juergen@informatik.uni-siegen.de>  Munechika_SUMIKAWA.email  Nicholas_J._Humfrey.email  Romain_Dolbeau.email  Shane_Wegner.email  Steven_M._Schultz_<sms@2BSD.COM>.email  Thomas_Orgis.asc  Zuxy_Meng.email
lgpl/: first_final.txt  notes.txt
lgpl/replies/: Chris_Butler_<chrisb@crustynet.org.uk>.email  Daniel_Kobras_<kobras@debian.org>.email  Daniel_O'Connor_<doconnor@gsoft.com.au>.email  Daniel_Skarda_<0rfelyus@atrey.karlin.mff.cuni.cz>.email  (+10 more)
mhipp/: BUGS  CHANGES  INSTALL  Makefile  README  README.remote  audio.c  audio_dec.c  audio_nas.c  audio_oss.c  audio_sgi.c  audio_sun.c  common.c  common.h  control_generic.c  control_sajber.c  control_tk3play.c  dct64_3dnow.s  dct64_MMX.c  dct64_i486.c  decode.c  decode_2to1.c  decode_3dnow.s  decode_4to1.c  decode_i386.c  decode_i586.s  decode_ntom.c  equalizer.c  equalizer_3dnow.s  getcpuflags.s  getlopt.c  getlopt.h  httpget.c  layer2.c  layer3.c  mpg123.1  mpg123.c  mpg123.h  playlist.c  readers.c  (+4 more)
mplayerxp-mp3lib/: Makefile  dct64_MMX.c  dct64_k7.c  decode_3dnow.h  decode_MMX.c  mpg123.h  sr1.c  tabinit_MMX.c
notes/: all-in-one.txt  alsa.txt  audio_format.txt  beating_mp3lib_in_mplayer.tex  flexible_decoder_pitch.txt  gapless.txt  insight.txt  mpg123-vs-mplayer.sh  ntom.txt  restructure.txt  seek.txt  soundfromthegrave0.eps  soundfromthegrave2.eps
patents/: gen-styl.css  newsforge-article.htm
rounding_performance/: Makefile  fp_cast_test.c  s16rounder.c  s32rounder.c
scripts/: intsym.pl
src/: Makefile.am  Makemodule.am  audio.c  audio.h  buffer.c  control_generic.c  mpg123.c  out123.c  sysutil.c  term.c  xfermem.c
tags/: updiff.pl
test/: Makefile  buffer.c  compliance.pl  compliance.sh  endian.c  hex24_double.c  hex_bitstream.c  rms16.c  rmsdouble.c  s24_to_double.c  to_double.c
tools/: pipedec.c
website/: .htaccess  Makefile  asterisk.shtml  benchmarking.shtml  contact.shtml  download.shtml  doxygen.css  examplecode.c  faq.shtml  features.shtml  hacking.shtml  header.html  index.html  index.shtml  lame-resampling.shtml  linkbar.html  links.shtml  mpg123.make-snapshot.sh  news2html.pl  robots.txt  testing.shtml  top.shtml  update-logo.sh
(+367 files in other folders)
