## Makefile.am: produce Makefile.in from this

## copyright by the mpg123 project - free software under the terms of the LGPL 2.1
## see COPYING and AUTHORS files in distribution or http://www.mpg123.org
## initially written by Nicholas J. Humfrey

SUBDIRS = @MODULE_LIST@
DIST_SUBDIRS = \
	output_alsa \
	output_coreaudio \
	output_dummy \
	output_esound \
	output_jack \
	output_oss \
	output_portaudio \
	output_sdl
