## Makefile.am: produce Makefile.in from this

## copyright by the mpg123 project - free software under the terms of the LGPL 2.1
## see COPYING and AUTHORS files in distribution or http://www.mpg123.org
## initially written by Nicholas J. Humfrey

output_esound_la_SOURCES = audio_esd.c
output_esound_la_CFLAGS  = @ESOUND_CFLAGS@
output_esound_la_LDFLAGS = -module -avoid-version @ESOUND_LDFLAGS@
output_esound_la_LIBADD  = @ESOUND_LIBS@
