## Makefile.am: produce Makefile.in from this

## copyright by the mpg123 project - free software under the terms of the LGPL 2.1
## see COPYING and AUTHORS files in distribution or http://www.mpg123.org
## initially written by Nicholas J. Humfrey

pkglib_LTLIBRARIES = output_nas.la
output_nas_la_SOURCES = nas.c
output_nas_la_LDFLAGS = -module -avoid-version
output_nas_la_LIBADD = -laudio
